AB#214480: fixes for social-feed carousel - JS is copy of recomendation-module - vert/hor aligment next/prev button - scrollbar is updated according to Design - card height/width is fixed - focus ring is moved to the link

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/social-feed/_social-feed.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/social-feed/_social-feed.scss
@@ -2,6 +2,10 @@
   position: relative;
   @include brand-border-overflow;
 
+  &--overlaps-previous {
+    top: -40px;
+  }
+
   &__content {
     position: relative;
     background-color: clr(subcolor-2);
@@ -15,113 +19,82 @@
       color: clr(primary);
       text-transform: uppercase;
       font-family: variable(heading-font);
-
-      @include xs {
-        font-size: 4rem;
-        line-height: 4rem;
-      }
+      font-size: 4rem;
+      line-height: 1;
+      margin-bottom: 4rem;
 
       @include medium {
         font-size: 5.6rem;
-        line-height: 5.6rem;
       }
 
-      @include large {
+      @include xl {
         font-size: 6.4rem;
-        line-height: 6.4rem;
+        margin-bottom: 6rem;
       }
     }
   }
 
   &__graphic-divider {
     text-align: center;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
 
+    @include xl {
+      margin-bottom: 6rem;
+    }
+  }
+
+  .social-feed-swiper-container-outer {
+    position: relative;
   }
 
   // overrides for the default styles of swiper - container, progress bar and buttons of the carousel
   .social-feed-swiper-container {
     width: 100%;
-    height: 31.7rem;
-
-    @include xs {
-      height: 24.8rem;
-    }
-
-    @include medium {
-      height: 21.6rem;
-    }
-
-    @include xl {
-      height: 31.7rem;
-    }
-
   }
 
   // increasing specificity to avoid using !important
-  .social-feed__content>.swiper-scrollbar {
-    height: 0.8rem;
-    width: 100%;
-    max-width: 47.9rem;
-    left: 0;
-    right: 0;
-    background-color: rgba(var(--c-secondary-rgb),0.4);
-    margin: 6rem auto 0;
-
-    & .swiper-scrollbar-drag {
-      background: clr(secondary);
-    }
-
-    @include xs {
-      height: 0.5rem;
-      max-width: 16.1rem;
-      margin: 3rem auto 0;
-    }
+  .swiper-scrollbar {
+    background-color: rgba(clr(secondary-rgb),0.4);
+    height: 0.5rem;
+    width: 16.1rem;
+    margin: 3rem auto 0;
 
     @include medium {
       height: 0.5rem;
-      max-width: 25.7rem;
-      margin: 4rem auto 0;
+      width: 25.7rem;
+      margin-top: 4rem;
     }
 
     @include xl {
       height: 0.8rem;
-      max-width: 42.7rem;
-      margin: 6rem auto 0;
+      width: 42.7rem;
+      margin-top: 4rem;
+    }
+
+    & .swiper-scrollbar-drag {
+      background: clr(secondary);
     }
   }
 
-  .social-feed-slide.swiper-slide {
-    border-radius: 1rem;
-    max-height: 31.7rem;
-    overflow: hidden;
-    visibility: hidden; // for watchSlidesVisibility
-
-    &:focus-within {
-      border: 2px solid black;
-    }
-    &.swiper-slide-visible {
-      visibility: visible;
-    }
-  }
-
-  .social-feed__content .swiper-button-prev, .social-feed__content .swiper-button-next  {
-    background-color: clr(subcolor-3);
-    border: 0;
+  .swiper-button-prev, .swiper-button-next  {
+    background-color: clr(text-inverse);
     border-radius: 50%;
+    border: 0;
     box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.1);
-    width: 7rem;
-    height: 7rem;
-    margin-top: 4.5rem;
+    margin-top: -(5.5rem)/2;
+    width: 5.5rem;
+    height: 5.5rem;
 
-    @media (max-width: 768px) {
+    @include medium {
+      margin-top: -(6rem)/2;
       width: 6rem;
       height: 6rem;
     }
 
-    @media (max-width: 375px) {
-      width: 5.5rem;
-      height: 5.5rem;
+    @include xl {
+      margin-top: -(7rem)/2;
+      width: 7rem;
+      height: 7rem;
     }
 
     &.swiper-button-disabled {
@@ -140,7 +113,20 @@
     }
   }
 
-  &--overlaps-previous {
-    top: -40px;
+  .swiper-button-next, .swiper-container-rtl .swiper-button-prev {
+    right: 1.5rem;
+
+    @include medium {
+      right: 3rem;
+    }
   }
+
+  .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
+    left: 1.5rem;
+
+    @include medium {
+      left: 3rem;
+    }
+  }
+
 }
